--- a/index.html
+++ b/index.html
@@ -2,13 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Watchdog</title>
+    <title>Watchdog HIDS - About</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Watchdog HIDS</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">About</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="tutorial.html">Tutorial</a></li>
+                <li><a href="downloads.html">Downloads</a></li>
+            </ul>
+        </nav>
     </header>
-    
+
+    <main>
+        <section id="about">
+            <h2>About Watchdog HIDS</h2>
+
+            <div class="content-container">
+                <div class="text-content">
+                    <p>[Provide a high-level overview of your project, the problem it solves, and some of the
+                        technologies it uses. Keep the information short (about one written page of text) plus add
+                        images, screen shots, diagrams, etc..]</p>
+                    <p>[Paragraph about the project details]</p>
+                    <p>[technologies used]</p>
+                </div>
+                <div class="image-content">
+                    <img src="images/project-overview.png" alt="Project Overview image">
+                </div>
+            </div>
+
+            <div>
+                <div class="text-content">
+                    <h3>Key Features</h3>
+                    <ul>
+                        <li>Feature 1</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>2025 Watchdog HIDS</p>
+    </footer>
 </body>
 </html>
