added gunnar about section

--- a/team.html
+++ b/team.html
@@ -28,11 +28,15 @@
                 </div>
                 <div class="member-bio">
                     <h3>Gunnar</h3>
-                    <p>[Create a 150-250 word Biography describing yourself. List your degree, research/project
-                        affiliations (including capstone), interests, etc..]</p>
+                    <p>Gunnar is a senior at the University of Utah that is graduating with a BCS in Computer Science
+                        with track certificates in Software Development and Computer Systems in Spring 2025. He has a 
+                        particular interest in low-level, backend programming; specifically operating systems and 
+                        compilers. He was the member responsible for the linux endpoint on the Watchdog HIDS project.
+                        He enjoys gaming and messing around with NixOS in his free time.</p>
                     <div class="contact-info">
-                        <p>Email: gunnar@example.com</p>
-                        <p><a href="https://linkedin.com/in/..." target="_blank">LinkedIn Profile</a></p>
+                        <p>Email: gunnarhovik@outlook.com</p
+                        <p><a href="https://www.linkedin.com/in/gunnar-hovik-710326253/" target="_blank">LinkedIn Profile</a></p>
+                        <p><a href="https://about.ghov.net/" target="_blank">Personal Website</a></p>
                     </div>
                 </div>
             </div>
