shifted the formatting of tutorial a bit

--- a/tutorial.html
+++ b/tutorial.html
@@ -42,8 +42,9 @@
                         <p><code>uthash</code></p>
                         <p><code>openssl</code></p>
                         <p>Make sure to install the above before attempting to build. Should all be in your
-                        distros package manager:
-                        <code>sudo pacman -S libpcap cjson uthash openssl</code><br><code>sudo apt install libpcap-dev libcjson-dev uthash-dev libssl-dev</code></p>
+                        distros package manager:<p/>
+                        <p><code>sudo pacman -S libpcap cjson uthash openssl</code></p>
+                        <p><code>sudo apt install libpcap-dev libcjson-dev uthash-dev libssl-dev</code></p>
                       <h4 id="compile">Compile</h4>
                         <p>Build using <code>make</code></p>
                       <h4 id="installing">Installing</h4>
