--- a/tutorial.html
+++ b/tutorial.html
@@ -26,15 +26,14 @@
                 <div class="tutorial-content">
                   <div class="tutorial-text">
                       <h3 id="central-server">Central Server</h3>
-                        <p>Inside the <code>node-server</code> dir, copy the <code>.env.example</code> to <code>.env</code> and fill with appropriate values
-                        Inside the <code>analysis-engine</code> dir, create a <code>.env</code> file
-                        To run with a unified central server, change the <code>DB_HOST</code> to <code>mariadb</code> and the <code>HAE_HOST</code> to <code>rust-microservice</code>
-                        If you would like email notifications, provide credentials for you desired mailserver
+                        <p>Inside the <code>node-server</code> dir, copy the <code>.env.example</code> to <code>.env</code> and fill with appropriate values</p>
+                        <p>Inside the <code>analysis-engine</code> dir, create a <code>.env</code> file</p>
+                        <p>To run with a unified central server, change the <code>DB_HOST</code> to <code>mariadb</code> and the <code>HAE_HOST</code> to <code>rust-microservice</code></p>
+                        <p>If you would like email notifications, provide credentials for you desired mailserver
                         Then run:</p>
                         <p><code>docker-compose up --build -d</code></p>
-                        <p>You can now register endpoints via the Watchdog UI Admin screen
-                        To reset the DB, run either <code>db_reset.ps1</code> (on Windows) or <code>db_reset.sh</code> (On Linux).</p>
-                        <p>   </p>
+                        <p>You can now register endpoints via the Watchdog UI Admin screen</p>
+                        <p>To reset the DB, run either <code>db_reset.ps1</code> (on Windows) or <code>db_reset.sh</code> (On Linux).</p>
                       <h3 id="linux-endpoint">Linux Endpoint</h3>
                         <h4 id="dependencies">Dependencies</h4>
                         <p><code>pbpcap</code></p>
