added tmp release

--- a/downloads.html
+++ b/downloads.html
@@ -30,7 +30,7 @@
                         <p>Supported Platforms:</p>
                         <p>Endpoints: Linux, Windows</p>
                         <p>Central Server and analysis engine: Windows(dockerized), linux</p>
-                        <a href="#" class="download-button">Download Now</a>
+                        <a href="release/watchdoghids-1.0.zip" class="download-button">Download Now</a>
                     </div>
                 </div>
             </div>
