added about malik section

--- a/team.html
+++ b/team.html
@@ -47,11 +47,13 @@
                 </div>
                 <div class="member-bio">
                     <h3>Malik</h3>
-                    <p>[Create a 150-250 word Biography describing yourself. List your degree, research/project
-                        affiliations (including capstone), interests, etc..]</p>
+                    <p>Malik is graduating with a BCS in Computer Science in Spring 2025 here at the University of Utah. 
+                        His professional interests include web development, cyber security, and data analysis. He was responsible for 
+                        designing the web interface of the Watchdog HIDS project. In his spare time he loves to hike, bake, and study foreign languages.
+                    </p>
                     <div class="contact-info">
-                        <p>Email: malik@example.com</p>
-                        <p><a href="https://linkedin.com/in/..." target="_blank">LinkedIn Profile</a></p>
+                        <p>Email: malikqader@pm.me</p>
+                        <p><a href="https://linkedin.com/in/malik-qader/" target="_blank">LinkedIn Profile</a></p>
                     </div>
                 </div>
             </div>
