--- a/team.html
+++ b/team.html
@@ -62,11 +62,17 @@
                 </div>
                 <div class="member-bio">
                     <h3>Philippe</h3>
-                    <p>[Create a 150-250 word Biography describing yourself. List your degree, research/project
-                        affiliations (including capstone), interests, etc..]</p>
+                    <p>Philippe is a senior at the University of Utah graduating with a BSc in Software Development in
+                        Spring 2025. He has particular interests in backend development and the intersection of
+                        cybersecurity with software development. He was the member responsible for developing the
+                        analysis engine and the Windows endpoint on the Watchdog HIDS project.
+                        He enjoys working on small projects to explore new languages, tools and libraries, as well as
+                        occasionally participating in capture the flag cybersecurity competitions. When not involved
+                        with programming related activities, he can be found gaming or playing tennis.</p>
                     <div class="contact-info">
-                        <p>Email: philippe@example.com</p>
-                        <p><a href="https://linkedin.com/in/..." target="_blank">LinkedIn Profile</a></p>
+                        <p>Email: philippe.gonzalez@comcast.net</p>
+                        <p><a href="https://www.linkedin.com/in/philippe-gonzalez-71b532171/" target="_blank">LinkedIn Profile</a></p>
+                        <p><a href="https://linktr.ee/vnilabean" target="_blank">Personal Linktree</a></p>
                     </div>
                 </div>
             </div>
