Turin about section and features list

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Watchdog HIDS - About</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Watchdog HIDS</h1>
@@ -39,7 +41,32 @@
                 <div class="text-content">
                     <h3>Key Features</h3>
                     <ul>
-                        <li>Feature 1</li>
+                        <li><strong>Cross-Platform Endpoint Monitoring</strong><br>
+                            Lightweight agent services for Linux and Windows collect a wide range of system data with
+                            minimal resource impact.
+                        </li>
+                        <li><strong>Real-Time Endpoint Data Analysis</strong><br>
+                            Central server facilitates an advanced Heuristic Analysis Engine to process all data being
+                            collected from the endpoints and identify suspicious events and trends.
+                        </li>
+                        <li><strong>Security Event Alerts</strong><br>
+                            Generate records of potentially malicious behavior so they can be managed by users as soon
+                            as they occur.
+                        </li>
+                        <li><strong>Flexible Setup Configurations</strong><br>
+                            Microservice project structure allows users to setup Watchdog in accordance with their
+                            specific needs. Deploy each component on a dedicated machine or bundle all together on one
+                            host.
+                        </li>
+                        <li><strong>External Integrations</strong><br>
+                            Leverage trusted 3rd party security apis to provide more robust analysis and connect to an
+                            existing mail servers to extend alert capabilities. Watchdog is designed to plug into any
+                            user's existing ecosystem.
+                        </li>
+                        <li><strong>Open Source Security</strong><br>
+                            Use the Watchdog framework to develop custom analyzers that easily slot into the Heuristic
+                            Analysis Engine, or use the API to integrate with existing dashboards and tools.
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -50,4 +77,5 @@
         <p>2025 Watchdog HIDS</p>
     </footer>
 </body>
+
 </html>
