--- a/team.html
+++ b/team.html
@@ -29,13 +29,14 @@
                 <div class="member-bio">
                     <h3>Gunnar</h3>
                     <p>Gunnar is a senior at the University of Utah that is graduating with a BCS in Computer Science
-                        with track certificates in Software Development and Computer Systems in Spring 2025. He has a 
-                        particular interest in low-level, backend programming; specifically operating systems and 
+                        with track certificates in Software Development and Computer Systems in Spring 2025. He has a
+                        particular interest in low-level, backend programming; specifically operating systems and
                         compilers. He was the member responsible for the linux endpoint on the Watchdog HIDS project.
                         He enjoys gaming and messing around with NixOS in his free time.</p>
                     <div class="contact-info">
-                        <p>Email: gunnarhovik@outlook.com</p
-                        <p><a href="https://www.linkedin.com/in/gunnar-hovik-710326253/" target="_blank">LinkedIn Profile</a></p>
+                        <p>Email: gunnarhovik@outlook.com</p>
+                        <p><a href="https://www.linkedin.com/in/gunnar-hovik-710326253/" target="_blank">LinkedIn
+                                Profile</a></p>
                         <p><a href="https://about.ghov.net/" target="_blank">Personal Website</a></p>
                     </div>
                 </div>
@@ -76,12 +77,24 @@
                     <img src="images/turin.jpg" alt="Turin image">
                 </div>
                 <div class="member-bio">
-                    <h3>Turin</h3>
-                    <p>[Create a 150-250 word Biography describing yourself. List your degree, research/project
-                        affiliations (including capstone), interests, etc..]</p>
+                    <h3>Turin Briggs</h3>
+                    <p>Turin is a backend-focused software developer graduating with a B.Sc. in Computer Science with
+                        the Computer Systems track certificate from the University of Utah. With four years of
+                        experience in backend API and database development, he has contributed to the design,
+                        maintenance, and integration of secure, reliable systems across a variety of production
+                        environments. For the Watchdog HIDS project, he was responsible for the Database and Node server
+                        while also integrating the various components of the watchdog service suite. He also handled the
+                        Dockerization of Watchdog to provide a simple setup process.</p>
+                    <p>Turin's professional interests lie at the intersection of cybersecurity, operational procedures,
+                        policy, and compliance. He is particularly drawn to the challenges of assessing systems
+                        and devising plans to ensure they align with organizational goals and regulatory frameworks.</p>
+                    <p>Outside of work, Turin manages a sophisticated home server setup running a range of self-hosted
+                        services including media servers, NAS, and creative workload offloading. He also enjoys playing
+                        euro board games, 3D printing, and reading philosophy texts—interests that allow him to explore
+                        creative ideas and engage in the optimization of complex systems.</p>
                     <div class="contact-info">
-                        <p>Email: turin@example.com</p>
-                        <p><a href="https://linkedin.com/in/..." target="_blank">LinkedIn Profile</a></p>
+                        <p>Email: turin.briggs@protonmail.com</p>
+                        <p><a href="https://www.linkedin.com/in/turin-briggs/" target="_blank">LinkedIn Profile</a></p>
                     </div>
                 </div>
             </div>
