Update turin bio

--- a/team.html
+++ b/team.html
@@ -48,9 +48,11 @@
                 </div>
                 <div class="member-bio">
                     <h3>Malik</h3>
-                    <p>Malik is graduating with a BCS in Computer Science in Spring 2025 here at the University of Utah. 
-                        His professional interests include web development, cyber security, and data analysis. He was responsible for 
-                        designing the web interface of the Watchdog HIDS project. In his spare time he loves to hike, bake, and study foreign languages.
+                    <p>Malik is graduating with a BCS in Computer Science in Spring 2025 here at the University of Utah.
+                        His professional interests include web development, cyber security, and data analysis. He was
+                        responsible for
+                        designing the web interface of the Watchdog HIDS project. In his spare time he loves to hike,
+                        bake, and study foreign languages.
                     </p>
                     <div class="contact-info">
                         <p>Email: malikqader@pm.me</p>
@@ -74,7 +76,8 @@
                         with programming related activities, he can be found gaming or playing tennis.</p>
                     <div class="contact-info">
                         <p>Email: philippe.gonzalez@comcast.net</p>
-                        <p><a href="https://www.linkedin.com/in/philippe-gonzalez-71b532171/" target="_blank">LinkedIn Profile</a></p>
+                        <p><a href="https://www.linkedin.com/in/philippe-gonzalez-71b532171/" target="_blank">LinkedIn
+                                Profile</a></p>
                         <p><a href="https://linktr.ee/vnilabean" target="_blank">Personal Linktree</a></p>
                     </div>
                 </div>
@@ -87,19 +90,20 @@
                 <div class="member-bio">
                     <h3>Turin Briggs</h3>
                     <p>Turin is a backend-focused software developer graduating with a B.Sc. in Computer Science with
-                        the Computer Systems track certificate from the University of Utah. With four years of
+                        the Computer Systems track certificate from the University of Utah in Spring 2025. With four
+                        years of
                         experience in backend API and database development, he has contributed to the design,
                         maintenance, and integration of secure, reliable systems across a variety of production
                         environments. For the Watchdog HIDS project, he was responsible for the Database and Node server
-                        while also integrating the various components of the watchdog service suite. He also handled the
-                        Dockerization of Watchdog to provide a simple setup process.</p>
+                        while also integrating the various components of the watchdog service suite and Dockerizing
+                        releases for easy deployment.</p>
                     <p>Turin's professional interests lie at the intersection of cybersecurity, operational procedures,
-                        policy, and compliance. He is particularly drawn to the challenges of assessing systems
+                        policy, and compliance. He is drawn to the challenges of assessing systems
                         and devising plans to ensure they align with organizational goals and regulatory frameworks.</p>
                     <p>Outside of work, Turin manages a sophisticated home server setup running a range of self-hosted
                         services including media servers, NAS, and creative workload offloading. He also enjoys playing
                         euro board games, 3D printing, and reading philosophy texts—interests that allow him to explore
-                        creative ideas and engage in the optimization of complex systems.</p>
+                        creative ideas and complex systems.</p>
                     <div class="contact-info">
                         <p>Email: turin.briggs@protonmail.com</p>
                         <p><a href="https://www.linkedin.com/in/turin-briggs/" target="_blank">LinkedIn Profile</a></p>
