--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                         <h4>Central Management Dashboard:</h4>
                         <ul>
-                            <li>React web application with Node.js backend</li>
+                            <li>React web application</li>
                             <li>Interface for data visualization and threat management</li>
                             <li>Built with JavaScript and JSX</li>
                         </ul>
@@ -91,8 +91,13 @@
 
                         <h4>Backend Infrastructure:</h4>
                         <ul>
-                            <li>MariaDB database for secure storage of logs and alerts</li>
+                            <li>Node Express server to host API</li>
+                            <li>MariaDB database for the storage of endpoint data and event logs</li>
                             <li>Custom heuristic analysis engine microservice written in Rust</li>
+                        </ul>
+                        <h4>Deployment:</h4>
+                        <ul>
+                            <li>Docker for easy, low-config containerized deployments</li>
                         </ul>
                         <h4>Development Tools:</h4>
                         <ul>
