added videos to tutorial html

--- a/tutorial.html
+++ b/tutorial.html
@@ -28,6 +28,11 @@
             <!-- Central Server Section -->
             <details>
               <summary>Central Server</summary>
+              <video controls>
+                <source src="videos/central-server-tutorial.mp4" type="video/mp4">
+                Your browser does not support the video tag
+              </video>
+
               <p>
                 Inside the <code>node-server</code> directory, copy the <code>.env.example</code> file to <code>.env</code> and fill it with appropriate values.
               </p>
@@ -52,6 +57,11 @@
             <!-- Linux Endpoint Section -->
             <details>
               <summary>Linux Endpoint</summary>
+              <video controls>
+                <source src="videos/linux-endpoint-tutorial.mp4" type="video/mp4">
+                Your browser does not support the video tag
+              </video>
+
               <h4 id="linux-dependencies">Dependencies</h4>
                 <p>- <code>pbpcap</code></p>
                 <p>- <code>cjson</code></p>
@@ -104,6 +114,11 @@
             <!-- Windows Endpoint Section -->
             <details>
               <summary>Windows Endpoint</summary>
+              <video controls>
+                <source src="videos/windows-endpoint-tutorial.mp4" type="video/mp4">
+                Your browser does not support the video tag
+              </video>
+
               <h4 id="windows-simple-install">Simple Install</h4>
               <p>
                 Run the installer:
